--- a/application.yaml
+++ b/application.yaml
@@ -10,3 +10,7 @@ eureka:
     register-with-eureka: true
     service-url:
       defaultZone : http://localhost:8761/eureka
+
+
+server:
+  port: 8081
